<resources>
    <string name="app_name">CHIIKAWA_N_FRIENDS_DIARY_APP</string>
    <string name="bjea">Bjea Marelle A. Dantic</string>
    <string name="red">Forest Red R. Ibarrientos</string>
    <string name="ayel">Danielle Jazmine Aliah N. Mercado</string>
    <string name="phia">Sophia Isabelle B. Paypon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="back">BACK</string>
    <string name="save">SAVE</string>
    <string name="write">What\'s on your mind?</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="profile">PROFILE</string>
    <string name="check_notes_btn">CHECK NOTES</string>
    <string name="about_us">ABOUT US</string>
    <string name="logout">LOGOUT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="meet_devs">MEET THE DEVELOPERS</string>
    <string name="sl_splash">WHISPERING PAGES</string>
    <string name="tap">TAP TO START</string>
    <string name="notes_title">YOUR NOTES</string>
    <string name="fn">First Name</string>
    <string name="mn">Middle Name</string>
    <string name="ln">Last Name</string>
    <string name="bday">Birthday</string>
    <string name="fn_">First Name:</string>
    <string name="mn_">Middle Name:</string>
    <string name="ln_">Last Name:</string>
    <string name="bday_">Birthday:</string>
    <string name="email_">Email:</string>
    <string name="day">dd</string>
    <string name="month">mm</string>
    <string name="year">yyyy</string>
    <string name="slash">/</string>
    <string name="home">HOME</string>
    <string name="edit"><u>Edit Details</u></string>
    <string name="confirm">Confirm Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="enterCurr">Enter Current Password</string>
    <string name="enterNew">Enter New Password</string>
    <string name="ConfNew">Confirm New Password</string>
    <string name="Upd">UPDATE PASSWORD</string>
    <string name="redText">Cloud Engineer, DevOps, microservices</string>
    <string name="bjeaText">UI/UX design, React, Flutter</string>
    <string name="ayelText">Algorithms, data structures, Kotlin/Java</string>
    <string name="phiaText">Agile methodologies, Firebase, cross-functional teamwork</string>
</resources>