<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="520dp"
        android:layout_height="821dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signup_page" />

    <EditText
        android:id="@+id/etYourFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/fn"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <EditText
        android:id="@+id/etYourPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etYourConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etYourEmail"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivToggleYourPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_eye_closed"
        app:layout_constraintBottom_toBottomOf="@+id/etYourPassword"
        app:layout_constraintEnd_toEndOf="@+id/etYourPassword"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/etYourPassword"
        app:layout_constraintTop_toTopOf="@+id/etYourPassword"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/etYourLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/ln"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/etYourMName"
        app:layout_constraintStart_toStartOf="@+id/etYourMName"
        app:layout_constraintTop_toBottomOf="@+id/etYourMName" />

    <EditText
        android:id="@+id/etYourMName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/mn"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/etYourFName"
        app:layout_constraintStart_toStartOf="@+id/etYourFName"
        app:layout_constraintTop_toBottomOf="@+id/etYourFName" />

    <EditText
        android:id="@+id/etYourBYear"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="110dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/year"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etYourBMonth" />

    <EditText
        android:id="@+id/editTextText14"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/day"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etYourLName" />

    <EditText
        android:id="@+id/etYourEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etYourBMonth" />

    <EditText
        android:id="@+id/etYourBMonth"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/month"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/editTextText14" />

    <EditText
        android:id="@+id/etYourConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etYourPassword" />

    <ImageView
        android:id="@+id/ivToggleYourConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_eye_closed"
        app:layout_constraintBottom_toBottomOf="@+id/etYourConfirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/etYourConfirmPassword"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/etYourConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/etYourPassword"
        app:tint="@color/white" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/Yellow"
        android:fontFamily="@font/tilt_warp"
        android:text="@string/sign_up"
        android:textColor="#789DB1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etYourConfirmPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/Yellow"
        android:fontFamily="@font/tilt_warp"
        android:text="@string/back"
        android:textColor="#C59CAD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:fontFamily="@font/tilt_warp"
        android:text="@string/bday"
        android:textColor="#799EB2"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="20dp"
        android:layout_height="35dp"
        android:fontFamily="@font/chewy"
        android:text="@string/slash"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText14"
        app:layout_constraintEnd_toStartOf="@+id/etYourBMonth"
        app:layout_constraintTop_toTopOf="@+id/editTextText14" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="20dp"
        android:layout_height="35dp"
        android:fontFamily="@font/chewy"
        android:text="@string/slash"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/etYourBMonth"
        app:layout_constraintEnd_toStartOf="@+id/etYourBYear"
        app:layout_constraintTop_toTopOf="@+id/etYourBMonth" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="228dp"
        android:layout_height="139dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/signup_letter" />


    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="168dp"
        android:layout_height="161dp"
        android:layout_marginStart="-50dp"
        android:layout_marginBottom="-70dp"
        android:src="@drawable/design_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="96dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBack"
        app:srcCompat="@drawable/usagi" />


</androidx.constraintlayout.widget.ConstraintLayout>