<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:background="@color/Background">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="543dp"
        android:layout_height="917dp"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="-50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_pap" />

    <ImageView
        android:id="@+id/imgChiikawa"
        android:layout_width="162dp"
        android:layout_height="179dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/adorablecutiechiikawa" />


    <EditText
        android:id="@+id/etYourBYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/chewy"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/etYourBDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etYourBDay"
        app:layout_constraintTop_toTopOf="@+id/etYourBDay" />

    <EditText
        android:id="@+id/etYourLName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/chewy"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvLNameLabel"
        app:layout_constraintTop_toTopOf="@+id/tvLNameLabel" />

    <EditText
        android:id="@+id/etYourMName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/chewy"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvMNameLabel"
        app:layout_constraintTop_toTopOf="@+id/tvMNameLabel" />

    <EditText
        android:id="@+id/etYourBMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/chewy"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBirthLabel"
        app:layout_constraintEnd_toStartOf="@+id/etYourBDay"
        app:layout_constraintStart_toEndOf="@+id/tvBirthLabel"
        app:layout_constraintTop_toTopOf="@+id/tvBirthLabel" />

    <TextView
        android:id="@+id/tvBirthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/chewy"
        android:text="@string/bday_"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLNameLabel" />

    <TextView
        android:id="@+id/tvMNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/chewy"
        android:text="@string/mn_"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFnameLabel" />

    <EditText
        android:id="@+id/etYourBDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/chewy"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/etYourBMonth"
        app:layout_constraintEnd_toStartOf="@+id/etYourBYear"
        app:layout_constraintStart_toEndOf="@+id/etYourBMonth"
        app:layout_constraintTop_toTopOf="@+id/etYourBMonth" />

    <EditText
        android:id="@+id/etYourFname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/chewy"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFnameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFnameLabel"
        app:layout_constraintTop_toTopOf="@+id/tvFnameLabel" />

    <TextView
        android:id="@+id/tvLNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/chewy"
        android:text="@string/ln_"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMNameLabel" />

    <TextView
        android:id="@+id/tvFnameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/chewy"
        android:text="@string/fn_"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgChiikawa" />

    <TextView
        android:id="@+id/tvYourEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/chewy"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEmailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEmailLabel"
        app:layout_constraintTop_toTopOf="@+id/tvEmailLabel" />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/chewy"
        android:text="@string/email_"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthLabel" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="420dp"
        android:layout_height="150dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_des_top" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="420dp"
        android:layout_height="150dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profile_des" />

    <ImageView
        android:id="@+id/tvTitle"
        android:layout_width="389dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/tilt_warp"
        android:src="@drawable/profile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="-50dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115"
        app:srcCompat="@drawable/ic_back" />

    <Button
        android:id="@+id/btnEditDetails"
        android:layout_width="136dp"
        android:layout_height="42dp"
        android:layout_marginTop="276dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/tilt_warp"
        android:stateListAnimator="@null"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#153C52"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#DBB5C2"
        android:fontFamily="@font/tilt_warp"
        android:text="@string/save_changes"
        android:textAlignment="center"
        android:textColor="#38586A"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/darkred"
        android:fontFamily="@font/tilt_warp"
        android:text="@string/cancel"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSlash1"
        android:layout_width="20dp"
        android:layout_height="35dp"
        android:fontFamily="@font/chewy"
        android:text="@string/slash"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/etYourBMonth"
        app:layout_constraintEnd_toStartOf="@+id/etYourBDay"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/etYourBMonth"
        app:layout_constraintTop_toTopOf="@+id/etYourBMonth"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/tvSlash2"
        android:layout_width="20dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/chewy"
        android:text="@string/slash"
        android:textSize="34sp"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintBottom_toBottomOf="@+id/etYourBYear"
        app:layout_constraintEnd_toStartOf="@+id/etYourBYear"
        app:layout_constraintStart_toEndOf="@+id/etYourBDay"
        app:layout_constraintTop_toTopOf="@+id/etYourBDay"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>